--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     .payment-form-wrapper {
       padding: 12px;
       background: white;
-      border-radius: 6px;
-      max-height: 100vh;
+      border-radius: 12px;
+      overflow-y: auto;
     }
 
     iframe {
